# PyDAQ

./: .gitignore  README.md  daq.py  pyproject.toml  requirements.txt  ydata.yml
configs/: device_test_ydata.yml
